// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
style = Object {
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "fontSize": 13,
    "lineHeight": 16,
    "color": "#FFFFFF",
    "fontFamily": "SF Pro Text",
    "marginBottom": 5,
    "marginLeft": 5,
    "fontWeight": "700"
}

<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      Object {
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(116,130,148,0.55)",
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          resizeMode="stretch"
          source={1}
          style={
            Object {
              "alignItems": "center",
              "height": 73.2,
              "marginLeft": 264,
              "marginTop": 135,
              "width": 222,
            }
          }
        />
        <View
          style={
            Object {
              "marginTop": 150,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 40,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={false}
              keyBoardType="email-address"
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Email"
              placeholderTextColor="rgba(255,255,255,.78)"
              returnKeyType="next"
              selectionColor="white"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "letterSpacing": -0.41,
                  "lineHeight": 24,
                }
              }
              underlineColorAndroid="#eff1f7"
              value=""
            />
          </View>
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 40,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              focus={undefined}
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Password"
              placeholderTextColor="rgba(255,255,255,.78)"
              returnKeyType="go"
              secureTextEntry={true}
              selectionColor="white"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "letterSpacing": -0.41,
                  "lineHeight": 24,
                }
              }
              value=""
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 20,
                },
                Object {},
                Object {
                  "marginTop": 50,
                },
              ]
            }
          >
            <View
              collapsable={undefined}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EA3154",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "width": 139,
                }
              }
            >
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#fff",
                        "fontSize": 12,
                        "fontWeight": "700",
                      },
                      Object {
                        "fontFamily": "SF Pro Display",
                        "fontSize": 17,
                      },
                    ]
                  }
                >
                  LOG IN
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginBottom": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "color": "#FFFFFF",
              "fontFamily": "SF Pro Text",
              "fontSize": 13.866666666666667,
              "lineHeight": 16,
              "marginBottom": 5,
            }
          }
        >
          Don't have an account yet?
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#FFFFFF",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
            Sign up for free on
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#FFFFFF",
                  "fontFamily": "SF Pro Text",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginLeft": 5,
                }
              }
            >
              Nubabi.com
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`show progress when logging in 1`] = `
style = Object {
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "fontSize": 13,
    "lineHeight": 16,
    "color": "#FFFFFF",
    "fontFamily": "SF Pro Text",
    "marginBottom": 5,
    "marginLeft": 5,
    "fontWeight": "700"
}

<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      Object {
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(116,130,148,0.55)",
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          resizeMode="stretch"
          source={1}
          style={
            Object {
              "alignItems": "center",
              "height": 73.2,
              "marginLeft": 264,
              "marginTop": 135,
              "width": 222,
            }
          }
        />
        <View
          style={
            Object {
              "marginTop": 150,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 40,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={false}
              keyBoardType="email-address"
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Email"
              placeholderTextColor="rgba(255,255,255,.78)"
              returnKeyType="next"
              selectionColor="white"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "letterSpacing": -0.41,
                  "lineHeight": 24,
                }
              }
              underlineColorAndroid="#eff1f7"
              value=""
            />
          </View>
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 40,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              focus={undefined}
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Password"
              placeholderTextColor="rgba(255,255,255,.78)"
              returnKeyType="go"
              secureTextEntry={true}
              selectionColor="white"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "letterSpacing": -0.41,
                  "lineHeight": 24,
                }
              }
              value=""
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 20,
                },
                Object {
                  "opacity": 0.2,
                },
                Object {
                  "marginTop": 50,
                },
              ]
            }
          >
            <View
              collapsable={undefined}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EA3154",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "width": 139,
                }
              }
            >
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginBottom": 15,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "color": "#FFFFFF",
              "fontFamily": "SF Pro Text",
              "fontSize": 13.866666666666667,
              "lineHeight": 16,
              "marginBottom": 5,
            }
          }
        >
          Don't have an account yet?
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#FFFFFF",
                "fontFamily": "SF Pro Text",
                "fontSize": 13,
                "lineHeight": 16,
              }
            }
          >
            Sign up for free on
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#FFFFFF",
                  "fontFamily": "SF Pro Text",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginLeft": 5,
                }
              }
            >
              Nubabi.com
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
